<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="go_to_activity_2">Go To Activity 2</string>
    <string name="open_google_dot_com">Open Google Dot Com</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>

    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount"></string>
    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>
    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
    <string name="remember_percent">Remember Tip Percent</string>
    <string name="round_label">Rounding</string>
    <string name="round_no">None</string>
    <string name="round_tip">Tip</string>
    <string name="round_total">Total</string>

    <string-array name="split_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>
    </string-array>

    <string name="split_label">Split Bill?</string>
    <string name="per_person_label">Per Person</string>
    <string name="per_person">$0.00</string>
    <string name="input_number">Input Number</string>
    <string name="email_address">Email Address</string>
    <string name="per_15">15%</string>
    <string name="txt_0">0</string>
    <string name="sBill_amount">Bill Amount</string>
    <string name="split_bill">Split bill</string>
    <string name="clear_All">CA</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="btn_Bang">=</string>
    <string name="txt_Exit">Exit</string>
    <string name="txt_Welcome">Welcome</string>
    <string name="text_NameAndSurname">Name and Surname</string>
    <string name="text_EmailAddress">Email Address</string>
    <string name="text_Phone">Phone</string>
    <string name="text_Password">Password</string>
    <string name="text_Register">Register</string>
    <string name="text_Login">Login</string>
    <string name="text_Intro">Lorem ipsum dolor sit amet, consecteturadipiscing elit.  Donec auctor neque sed pretium luctus.</string>
    <string name="text_Total">Total</string>
    <string name="text_Persent">Persent</string>
    <string name="text_Tip">Tip</string>
    <string name="text_Rouding">Rouding</string>
    <string name="text_None">None</string>
    <string name="text_Calculate">Calculate</string>
    <string name="text_mCong">M+</string>
    <string name="text_Mr">MR</string>
    <string name="text_mTru">M-</string>
    <string name="text_Clear">C</string>
    <string name="text_PhanTram">%</string>
    <string name="text_Nhan">*</string>
    <string name="text_Chia">/</string>
    <string name="text_Device">|</string>
    <string name="text_Signup">Sign up</string>
    <string name="text_Addphoto">Add  Photo</string>
    <string name="test">TEST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="click">Click</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="txtDangNhap">Đăng Nhập</string>
    <string name="txt_email">Email Address</string>
    <string name="txt_dangnhap">Đăng Nhập</string>
    <string name="txt_passlogin">Password</string>
    <string name="txt_quenmatkhau">Forget Password?</string>
    <string name="txt_newPass">New Password</string>
    <string name="txt_confirmPass">Confirm Password</string>
    <string name="txt_change">Change</string>
    <string name="requestLogin">Yeu cau dang nhap email va password</string>
    <string name="loginSuccess">Logined</string>
    <string name="admin">[PhongCH]</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_timeline">Timeline</string>
    <string name="error_field_required">This field is required</string>
    <string name="txt_signup">Sign up</string>
    <string name="txt_addphoto">Add Photo</string>
    <string name="txt_nameregister">Name and Surname</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_passregister">Password</string>

</resources>
